# dataset-interpreter

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: job_artifacts.py  jobs.py
backend/app/clients/: kaggle_client.py  llm_client.py
backend/app/core/: config.py
backend/app/schemas/: artifact.py  dataset.py  job.py
backend/app/services/: ai_interpretation_service.py  artifact_service.py  cleaning_plan_service.py  cleaning_service.py  feature_card_service.py  ingestion_service.py  issue_detection_service.py  job_orchestrator.py  modeling_contract_service.py  profiling_service.py  summary_service.py
backend/app/stores/: job_store.py
backend/app/utils/: file_utils.py  stats_utils.py
backend/tests/: test_ai_interpretation_service.py  test_artifact_storage_policy.py  test_cleaning_service.py  test_feature_card_service.py  test_ingestion_service.py  test_issue_detection_service.py  test_job_artifacts_api.py  test_jobs_api.py  test_modeling_contract_service.py  test_profiling_service.py  test_summary_service.py
docs/: CHECKPOINTS.md  DAY_01_PLAN.md  DAY_02_PLAN.md  DAY_03_PLAN.md  DAY_04_PLAN.md  DAY_05_PLAN.md  DAY_06_PLAN.md  DAY_07_PLAN.md  DAY_08_PLAN.md  DAY_09_PLAN.md  DAY_10_PLAN.md  DAY_11_PLAN.md  DAY_12_PLAN.md  DAY_13_PLAN.md  DAY_14_PLAN.md  DEMO_RUNBOOK.md  FRONTEND_PROJECTS_INTEGRATION.md  REALIGNMENT_01_ARTIFACT_HANDOFF.md  RENDER_DEPLOYMENT.md  ROADMAP_14_DAYS.md  SESSION_LOG.md  SPIRIT.md  TARGET_CALENDAR.md  TEST_STRATEGY.md
frontend/: app.js  index.html  styles.css
