[project]
name = "dataset-interpreter-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Rick Wuebker",email = "rlwuebker@gmail.com"}
]
requires-python = "^3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
